--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -7,9 +7,9 @@
         <body>
             <h1>Contact</h1>
 
-            <p>Francine Tongol<br>
-            2 Mount Olympus Dr. <br>Flint Hall Rm #125 <br>Syracuse, NY 13244<br>
-            <a href="mailto:fctongol@syr.edu">Francine Tongol Email</a><br>
+            <p>Francine Tongol<br><br>
+            2 Mount Olympus Dr. <br>Flint Hall Rm #125 <br>Syracuse, NY 13244<br><br>
+            <a href="mailto:fctongol@syr.edu">Francine Tongol Email</a><br><br>
             <img src="../images/LI-In-Bug.png" alt="Linkedin Logo"
             ><a href="https://www.linkedin.com/in/flctongol/" target="_blank">My LinkedIn Profile</a>
             
