--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -11,8 +11,8 @@
             <p>Francine Tongol<br><br>
             2 Mount Olympus Dr. <br>Flint Hall Rm #125 <br>Syracuse, NY 13244<br><br>
             <a href="mailto:fctongol@syr.edu">Francine Tongol Email</a><br><br>
-            <img src="../images/LI-In-Bug.png" alt="Linkedin Logo"
-            ><a href="https://www.linkedin.com/in/flctongol/" target="_blank">My LinkedIn Profile</a>
+            <img src="../images/LI-In-Bug.png" alt="Linkedin Logo">
+            <a href="https://www.linkedin.com/in/flctongol/" target="_blank">My LinkedIn Profile</a>
             
             <br>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.3044798980595!2d-76.13442628436997!3d43.03502480020032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39df9751a27%3A0x8a90f2b410ccca97!2sFlint%20Hall%2C%202%20Mt%20Olympus%20Dr%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1614269826108!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
