--- a/unit04-notes-tables.html
+++ b/unit04-notes-tables.html
@@ -5,11 +5,32 @@
         <title>Unit 04 Notes - Tables</title>
     </head>
     <body>
-        <table>
-            <tr>
+        <table> <!-- beginning of table-->
+                <!-- all text that displays to user in th or td -->
+                <!-- you can have p, img, lists inside td or th-->
+            <caption> World Population </caption> <!-- caption required for validation-->
+                <tr>
                 <th>Country</th>
                 <th>Population</th>
                 <th>% of World Population</th>
+            </tr>
+
+            <tr>
+                <td>China</td>
+                <td>1.4</td>
+                <td>18%</td>
+            </tr>
+
+            <tr>
+                <td>India</td>
+                <td>1.3</td>
+                <td>17.5%</td>
+            </tr>
+
+            <tr>
+                <td>United States</td>
+                <td>0.3</td>
+                <td>4.23%</td>
             </tr>
         </table>
     </body>
