--- a/unit04-notes-forms.html
+++ b/unit04-notes-forms.html
@@ -41,6 +41,7 @@
                 <option value="Sn">Senior</option>
             </select>
             <!-- the value tag is what gets sent when you submit form-->
+            <!-- no other html tags inside select, option is the only thing that can go there -->
             <br><br>
             <input type="submit" value="Send Application">
         </form>
