--- a/unit04-notes-forms.html
+++ b/unit04-notes-forms.html
@@ -8,6 +8,7 @@
     <body>
         <h1>College Application</h1>
         <form action="mailto:fctongol@syr.edu" method="POST">
+            <!-- you can use any html tag inside form -->
             <label for="firstname">Enter first name:</label>
             <!-- for attribute tells browser which form elemment this label links to -->
             <!-- must match value in id attribute -->
