--- a/unit04-notes-forms.html
+++ b/unit04-notes-forms.html
@@ -10,7 +10,7 @@
         <form action="mailto:fctongol@syr.edu" method="POST">
             <!-- you can use any html tag inside form -->
             <label for="firstname">Enter first name:</label>
-            <!-- for attribute tells browser which form elemment this label links to -->
+            <!-- for attribute tells browser which form element this label links to -->
             <!-- must match value in id attribute -->
             <input type="text" name="firstname" id="firstname"><br><br>
             
