--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -3,7 +3,7 @@
     <head>
         <title>Contact</title>
         <meta charset="utf-8">
-        <link ref="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
 </head>
 
         <body>
