--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -12,7 +12,7 @@
             <p>Francine Tongol<br><br>
             2 Mount Olympus Dr. <br>Flint Hall Rm #125 <br>Syracuse, NY 13244<br><br>
             <a href="mailto:fctongol@syr.edu">Francine Tongol Email</a><br><br>
-            <img src="../images/logo-sized.png" alt="Linkedin Logo">
+            <img src="../images/logo-sized.png" href="https://www.linkedin.com/in/flctongol/" alt="Linkedin Logo">
             <a href="https://www.linkedin.com/in/flctongol/" target="_blank">My LinkedIn Profile</a>
             
             <br>
