--- a/lab07/index.html
+++ b/lab07/index.html
@@ -7,6 +7,12 @@
     </head>
 
     <body>
+    
+        <nav>
+            <a href="">Home</a>
+            <a href="">Skills</a>
+            <a href="">Contact</a>
+        </nav>
 
     <h1>Francine Tongol's Biography</h1>
     
