--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -8,6 +8,12 @@
     </head>
 
     <body>
+        
+        <nav>
+            <a href="">Home</a>
+            <a href="">Skills</a>
+            <a href="">Contact</a>
+        </nav>
 
         <table>
             <caption>Technical Skills</caption>
