--- a/lab07/index.html
+++ b/lab07/index.html
@@ -9,9 +9,9 @@
     <body>
     
         <nav>
-            <a href="">Home</a>
-            <a href="">Skills</a>
-            <a href="">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="skills.html">Skills</a>
+            <a href="contact.html">Contact</a>
         </nav>
 
     <h1>Francine Tongol's Biography</h1>
