--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -8,11 +8,11 @@
     </head>
 
     <body>
-        
+
         <nav>
-            <a href="">Home</a>
-            <a href="">Skills</a>
-            <a href="">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="skills.html">Skills</a>
+            <a href="contact.html">Contact</a>
         </nav>
 
         <table>
