--- a/lab07/index.html
+++ b/lab07/index.html
@@ -16,7 +16,7 @@
 
     <h1>Francine Tongol's Biography</h1>
     
-    <img src="../images/lab5img.jpg">
+    <img src="../images/lab5img.jpg" alt="Photo of me and graphic design icons">
 
     <p>
         I’m a <strong>communications design major</strong> interested in creating website designs and UX/UI Design for mobile applications.
