--- a/lab09/contact.html
+++ b/lab09/contact.html
@@ -10,8 +10,8 @@
         <body>
 
             <nav>
-                <a href="index.html">Home</a>
-                <a href="skills.html">Skills</a>
+                <a href="index.html">Home</a> <span class="pipe">|</span>
+                <a href="skills.html">Skills</a> <span class="pipe">|</span>
                 <a href="contact.html">Contact</a>
             </nav>
 
@@ -47,7 +47,7 @@
                 <br><br>
                 
                 <label for="message">Enter your message:</label><br>
-                <textarea name="message" id="message" rows="10" cols="50">Tell me your inquiry!
+                <textarea name="message" id="message" rows="10" cols="30">Tell me your inquiry!
                 </textarea>
                 <br><br>
 
