--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -11,8 +11,8 @@
     <body>
 
         <nav>
-            <a href="index.html">Home</a>
-            <a href="skills.html">Skills</a>
+            <a href="index.html">Home</a> <span class="pipe">|</span>
+            <a href="skills.html">Skills</a> <span class="pipe">|</span>
             <a href="contact.html">Contact</a>
         </nav>
 
