--- a/lab10/index.html
+++ b/lab10/index.html
@@ -16,9 +16,12 @@
         </nav>
 
     <h1>Francine Tongol's Biography</h1>
+
+    <a href="#maincontent" id="skip">Skip to Content</a>
     
     <header><img src="../images/lab5img.jpg" alt="Francine next to Susan Kare quote with graphic design icons below" class="img1"></header>
     
+    <a id="maincontent"></a>
     <main>
     <section>
      <h2>Professional Info</h2>
@@ -70,7 +73,7 @@
     <p>
         My interests include anything in fashion, beauty, finance, graphic design, and entrepreneurship.
    </p></section>
-   
+
 </main>
 
    <footer>
