--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -16,6 +16,11 @@
             <a href="contact.html">Contact</a>
         </nav>
 
+        <h1>Skills</h1>
+
+        <a href="#maincontent" id="skip">Skip to Content</a>
+
+        <a id="maincontent"></a>
         <table>
             <caption>Technical Skills</caption>
 
