--- a/unit08-notes-float.html
+++ b/unit08-notes-float.html
@@ -28,7 +28,7 @@
 
     <p>Cotton candy muffin ice cream candy canes fruitcake carrot cake apple pie cheesecake lemon drops.
         Jelly-o halvah halvah apple pie.</p>
-    <div class="stopfloat"></div> <!-- special div tag with no contect to stop floating-->
+    <div class="stopfloat"></div> <!-- special div tag with no content to stop floating-->
     <p>Sesame snaps dragée brownie tiramisu fruitcake. Marshmallow croissant apple pie dessert chocolate cake sesame snaps
         gingerbread jujubes chupa chups. Apple pie carrot cake pudding cotton candy cookie. Caramels sugar plum cotton
         candy topping. Macaroon fruitcake lollipop chupa chups powder. Cheesecake cookie ice cream. Biscuit candy canes
