--- a/project/retirement.html
+++ b/project/retirement.html
@@ -77,7 +77,7 @@
                 by a percentage if you claim them before you reach the full retirement age which is between 66 and 67.
                 <br><br>The monthly retirement benefit check varies from person to person depending on when you decided
                 to claim them and if your earnings were above average incomes.
-                <br<br>>For example, those who retired in 2019 at their full retirement age got a maximum monthly benefit
+                <br><br>>For example, those who retired in 2019 at their full retirement age got a maximum monthly benefit
                 of $2,861 per month -- or $34,332 for the whole year. For those who waited until age 70 to start
                 collecting benefits, the monthly maximum was $3,770, or $45,240 annually, while those who started at age
                 62 would have received a maximum of $2,209 per month, or $26,508 for the year
