--- a/project/investments.html
+++ b/project/investments.html
@@ -129,26 +129,11 @@
 
             <h3>What Index Funds should I invest in?</h3>
             <ol>
-                <li>FZROX</li>
-                <ol>
-                    <li>Fidelity Total Stock Market Fund</li>
-                </ol>
-                <li>VFIAX</li>
-                <ol>
-                    <li>Vanguard Fund SP500 Fund</li>
-                </ol>
-                <li>VTSAX</li>
-                <ol>
-                    <li>Vanguard Fund Total Stock Market</li>
-                </ol>
-                <li>FZLIX</li>
-                <ol>
-                    <li>Fidelity International Stock Market Fund</li>
-                </ol>
-                <li>SWPPX</li>
-                <ol>
-                    <li>Charles Schwab SP500 Fund</li>
-                </ol>
+                <li>FZROX - Fidelity Total Stock Market Fund</li>
+                <li>VFIAX - Vanguard Fund SP500 Fund</li>
+                <li>VTSAX - Vanguard Fund Total Stock Market</li>
+                <li>FZLIX - Fidelity International Stock Market Fund</li>
+                <li>SWPPX - Charles Schwab SP500 Fund</li>
             </ol>
         </section>
     </main>
