--- a/project/index.html
+++ b/project/index.html
@@ -1,112 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>College Cents Home</title>
-    </head>
 
-    <body>
-        <nav>
-            <img src="images/smalllogo.png" alt="College Cents Logo">
-            <a href="index.html">Home</a> 
-            <a href="cashflow.html">Cashflow</a> 
-            <a href="investments.html">Investments</a>
-            <a href="taxes.html">Taxes</a>
-            <a href="retirement.html">Retirement</a>
-        </nav>
+<head>
+    <meta charset="utf-8">
+    <title>College Cents Home</title>
 
-        <header>
-            <img src="images/homebanner.png" alt="Icons of Suitcases Pie Charts Money Wallets etc">
-            <div>
-            <h1>College Cents</h1>
-            <p>"You don't have to see the whole staircase, just take the first step." - Martin Luther King Jr.</p>
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+    <nav>
+        <div class="navcontainer">
+            <img src="images/smalllogo.png" alt="College Cents Logo" class="navimg">
+
+            <div class="navlinks">
+                <a href="index.html">Home</a>
+                <a href="cashflow.html">Cashflow</a>
+                <a href="investments.html">Investments</a>
+                <a href="taxes.html">Taxes</a>
+                <a href="retirement.html">Retirement</a>
+            </div>
+        </div>
+    </nav>
+
+    <header>
+        <img src="images/homebanner.png" alt="Icons of Suitcases Pie Charts Money Wallets etc" class="headerimg">
+    </header>
+
+    <main>
+        <section>
+            <div class="indextitle">
+                <h1>College Cents</h1>
+                <p class="indextopquote">"You don't have to see the whole staircase, just take the first step." - Martin
+                    Luther King Jr.</p>
             </div>
 
-            <div>
-                <p>As a college student, we’re at this stage of adult life limbo. We transition from always being told what to do, to making some of the most important decisions of our lives. It’s the trial period of responsibility, and unfortunately financial responsibility is rarely in the forefront of our generation’s minds. Within these pages, that statement changes now. </p>
+
+            <div class="indexbit">
+                <p>As a college student, we’re at this stage of adult life limbo. We transition from always being told
+                    what to do, to making some of the most important decisions of our lives. It’s the trial period of
+                    responsibility, and unfortunately financial responsibility is rarely in the forefront of our
+                    generation’s minds. Within these pages, that statement changes now. </p>
             </div>
 
-            <div>
-                <div>
-                    <img src="images/cashicon.png" alt="Purple Wallet Outline">
-                    <br>
-                    <p>Cash Flow</p>
-                </div>
-                <div>
-                    <img src="images/investicon.png" alt="Purple Positive Graph Outline">
-                    <br>
-                    <p>Investments</p>
-                </div>
-                <div>
-                    <img src="images/taxicon.png" alt="Purple Scales Outline">
-                    <br>
-                    <p>Taxes</p>
-                </div>
-                <div>
-                    <img src="images/retireicon.png" alt="Purple Safe Outline">
-                    <br>
-                    <p>Retirement</p>
-                </div>
+            <br>
+        </section>
+
+        <section class="iconcontainer">
+
+            <div class="iconcard">
+                <img src="images/cashicon.png" alt="Purple Wallet Outline">
+                <br>
+                <p class="icontext">Cash Flow</p>
             </div>
-        </header>
 
-        <main>
-            <section>
-                <img src="images/bigcashicon.png" alt="Wallet">
-                <h2>Cash Flow Mgmt</h2>
-                <p>"The first step to taking contorl, is managing the present."</p>
-                <ul>
-                    <li>Income</li>
-                    <li>Savings</li>
-                    <li>Budget Plan</li>
-                    <li>Debt</li>
+            <div class="iconcard">
+                <img src="images/investicon.png" alt="Purple Positive Graph Outline">
+                <br>
+                <p class="icontext">Investments</p>
+            </div class="iconcard">
+
+            <div class="iconcard">
+                <img src="images/taxicon.png" alt="Purple Scales Outline">
+                <br>
+                <p class="icontext">Taxes</p>
+            </div>
+
+            <div class="iconcard">
+                <img src="images/retireicon.png" alt="Purple Safe Outline">
+                <br>
+                <p class="icontext">Retirement</p>
+            </div>
+            </div>
+            <br>
+        </section>
+
+        <section id="sectioncontainer">
+
+            <img src="images/bigcashicon.png" alt="Wallet" class="sectionimg">
+            <div>
+                <h2 class="sectiontitle">
+                    Cash Flow Mgmt</h2>
+                <p class="sectionquote">"The first step to taking control, is managing the present."</p>
+                <ul class="sectionlist">
+                    <li>- Income</li>
+                    <li>- Savings</li>
+                    <li>- Budget Plan</li>
+                    <li>- Debt</li>
                 </ul>
-                <a href="cashflow.html">Learn More</a>
-            </section>
+                <a href="cashflow.html" class="sectionlearn">Learn More</a>
+            </div>
+        </section>
 
-            <section>
-                <img src="images/biginvesticon.png" alt="Computer with Graphs">
-                <h2>Investments</h2>
-                <p>"If your money doesn’t work for you, you’ll be working for the rest of your life."</p>
-                <ul>
-                    <li>Stock Market</li>
-                    <li>Index Funds</li>
+
+        <section id="sectioncontainer">
+
+            <div>
+                <h2 class="sectiontitle2">Investments</h2>
+                <p class="sectionquote2">"If your money doesn’t work for you, you’ll be working for the rest of your life."</p>
+                <ul class="sectionlist2">
+                    <li>Stock Market -</li>
+                    <li>Index Funds -</li>
                 </ul>
-                <a href="investments.html">Learn More</a>
-            </section>
+                <a href="investments.html" class="sectionlearn2">Learn More</a>
+            </div>
 
-            <section>
-                <img src="images/bigtaxicon.png" alt="Scales">
-                <h2>Taxes</h2>
-                <p>"You’re old enough for the government to be entitled to a cut, but it doesn’t have to be a burdensome one."</p>
-                <ul>
-                    <li>Types of Taxes</li>
-                    <li>Tax Bracket</li>
-                    <li>Credits & Deductions</li>
+            <img src="images/biginvesticon.png" alt="Computer with Graphs" class="sectionimg2">
+
+        </section>
+
+        <section id="sectioncontainer">
+            <img src="images/bigtaxicon.png" alt="Scales" class="sectionimg">
+
+            <div>
+                <h2 class="sectiontitle3">Taxes</h2>
+                <p class="sectionquote">"You’re old enough for the government to be entitled to a cut, but it doesn’t have to be a burdensome
+                    one."</p>
+                <ul class="sectionlist">
+                    <li>- Types of Taxes</li>
+                    <li>- Tax Bracket</li>
+                    <li>- Credits & Deductions</li>
                 </ul>
-                <a href="taxes.html">Learn More</a>
-            </section>
+                <a href="taxes.html" class="sectionlearn">Learn More</a>
+            </div>
+        </section>
 
-            <section>
-                <img src="images/bigretireicon.png" alt="Safe with Coins">
-                <h2>Retirement</h2>
-                <p>"It’s never too early to plan for the future. Especially when compound interest is your best friend."</p>
-                <ul>
-                    <li>401(k)</li>
-                    <li>Social Security</li>
-                    <li>Roth/Traditional IRa</li>
+        <section id="sectioncontainer">
+            <div>
+                <h2 class="sectiontitle2">Retirement</h2>
+                <p class="sectionquote2">"It’s never too early to plan for the future. Especially when compound interest is your best friend."</p>
+                <ul class="sectionlist2">
+                    <li>401(k) -</li>
+                    <li>Social Security -</li>
+                    <li>Roth/Traditional IRA -</li>
                 </ul>
-                <a href="retirement.html">Learn More</a>
-            </section>
-        </main>
-        
-        <footer>
-            <hr>
-         
-            <p>&copy; 2021</p>
-            <p>Disclaimer: I am not a financial advisor. This material has been prepared for entertainment purposes only. You should consult your own financial advisors or do your own research before engaging in any transaction.
-            </p>
-        </footer>
+                <a href="retirement.html" class="sectionlearn2">Learn More</a>
+            </div>
+            <img src="images/bigretireicon.png" alt="Safe with Coins" class="sectionimg2">
+        </section>
+    </main>
 
-    </body>
+    <footer>
+        <hr>
+
+        <p>&copy; 2021</p>
+        <p>Disclaimer: I am not a financial advisor. This material has been prepared for entertainment purposes only.
+            You should consult your own financial advisors or do your own research before engaging in any transaction.
+        </p>
+    </footer>
+
+</body>
+
 </html>
