--- a/project/index.html
+++ b/project/index.html
@@ -78,7 +78,7 @@
 
         <section id="sectioncontainer">
 
-            <img src="images/bigcashicon.png" alt="Wallet" class="sectionimg">
+            <img src="images/iconcash.svg" alt="Wallet" class="sectionimg">
             <div>
                 <h2 class="sectiontitle">
                     Cash Flow Mgmt</h2>
