--- a/project/index.html
+++ b/project/index.html
@@ -76,11 +76,12 @@
             <br>
         </section>
 
-        <section id="sectioncontainer">
-
-            <img src="images/icontax.svg" alt="Wallet" class="sectionimg">
+        <section id="sectionbg">
+    
+        <div id="sectioncontainer2">
+            <img src="images/iconcash.svg" alt="Wallet" class="sectionimg">
             <div>
-                <h2 class="sectiontitle">
+                <h2 class="titlesec">
                     Cash Flow Mgmt</h2>
                 <p class="sectionquote">"The first step to taking control, is managing the present."</p>
                 <ul class="sectionlist">
@@ -91,6 +92,7 @@
                 </ul>
                 <a href="cashflow.html" class="sectionlearn">Learn More</a>
             </div>
+        </div>
         </section>
 
 
@@ -106,12 +108,12 @@
                 <a href="investments.html" class="sectionlearn2">Learn More</a>
             </div>
 
-            <img src="images/biginvesticon.png" alt="Computer with Graphs" class="sectionimg2">
+            <img src="images/iconinvest.svg" alt="Computer with Graphs" class="sectionimg2">
 
         </section>
 
         <section id="sectioncontainer">
-            <img src="images/bigtaxicon.png" alt="Scales" class="sectionimg">
+            <img src="images/icontax.svg" alt="Scales" class="sectionimg">
 
             <div>
                 <h2 class="sectiontitle3">Taxes</h2>
@@ -137,7 +139,7 @@
                 </ul>
                 <a href="retirement.html" class="sectionlearn2">Learn More</a>
             </div>
-            <img src="images/bigretireicon.png" alt="Safe with Coins" class="sectionimg2">
+            <img src="images/iconretire.svg" alt="Safe with Coins" class="sectionimg2">
         </section>
     </main>
 
