--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="navcontainer">
-            <img src="images/smalllogo.png" alt="College Cents Logo" class="navimg">
+            <img src="images/logo.png" alt="College Cents Logo" class="navimg">
 
             <div class="navlinks">
                 <a href="index.html">Home</a>
@@ -81,7 +81,7 @@
         <div id="sectioncontainer2">
             <img src="images/iconcash.svg" alt="Wallet" class="sectionimg">
             <div>
-                <h2 class="titlesec">
+                <h2 class="sectiontitle">
                     Cash Flow Mgmt</h2>
                 <p class="sectionquote">"The first step to taking control, is managing the present."</p>
                 <ul class="sectionlist">
@@ -112,34 +112,38 @@
 
         </section>
 
-        <section id="sectioncontainer">
-            <img src="images/icontax.svg" alt="Scales" class="sectionimg">
+        <section id="sectionbg">
+            <div id="sectioncontainer2">
+                <img src="images/icontax.svg" alt="Scales" class="sectionimg">
 
-            <div>
-                <h2 class="sectiontitle3">Taxes</h2>
-                <p class="sectionquote">"You’re old enough for the government to be entitled to a cut, but it doesn’t have to be a burdensome
-                    one."</p>
-                <ul class="sectionlist">
-                    <li>- Types of Taxes</li>
-                    <li>- Tax Bracket</li>
-                    <li>- Credits & Deductions</li>
-                </ul>
-                <a href="taxes.html" class="sectionlearn">Learn More</a>
+                <div>
+                    <h2 class="sectiontitle3">Taxes</h2>
+                    <p class="sectionquote">"You’re old enough for the government to be entitled to a cut, but it doesn’t have to be a burdensome
+                        one."</p>
+                    <ul class="sectionlist">
+                        <li>- Types of Taxes</li>
+                        <li>- Tax Bracket</li>
+                        <li>- Credits & Deductions</li>
+                    </ul>
+                    <a href="taxes.html" class="sectionlearn">Learn More</a>
+                </div>
             </div>
         </section>
 
         <section id="sectioncontainer">
-            <div>
-                <h2 class="sectiontitle2">Retirement</h2>
-                <p class="sectionquote2">"It’s never too early to plan for the future. Especially when compound interest is your best friend."</p>
-                <ul class="sectionlist2">
-                    <li>401(k) -</li>
-                    <li>Social Security -</li>
-                    <li>Roth/Traditional IRA -</li>
-                </ul>
-                <a href="retirement.html" class="sectionlearn2">Learn More</a>
-            </div>
-            <img src="images/iconretire.svg" alt="Safe with Coins" class="sectionimg2">
+            
+                <div>
+                    <h2 class="sectiontitle2">Retirement</h2>
+                    <p class="sectionquote2">"It’s never too early to plan for the future. Especially when compound interest is your best friend."</p>
+                    <ul class="sectionlist2">
+                        <li>401(k) -</li>
+                        <li>Social Security -</li>
+                        <li>Roth/Traditional IRA -</li>
+                    </ul>
+                    <a href="retirement.html" class="sectionlearn2">Learn More</a>
+                </div>
+                <img src="images/iconretire.svg" alt="Safe with Coins" class="sectionimg2">
+            
         </section>
     </main>
 
