--- a/project/cashflow.html
+++ b/project/cashflow.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="navcontainer">
-            <img src="images/smalllogo.png" alt="College Cents Logo" class="navimg">
+            <img src="images/logo.png" alt="College Cents Logo" class="navimg">
 
             <div class="navlinks">
                 <a href="index.html">Home</a> 
@@ -28,7 +28,7 @@
             <p class="pagequote">“The slightest adjustments to your daily routines can dramatically alter the outcomes in your life.” – Darren
                 Hardy</p>
             <h1 class="pagetitle">Cash Flow Management</h1>
-            <img src="images/cashflowbanner.jpg" alt="Fan of hundred dollar bills" class="pageheadimg">
+            <img src="images/cashflowbanner.png" alt="Fan of hundred dollar bills" class="pageheadimg">
         </div>
     </header>
 
