--- a/project/retirement.html
+++ b/project/retirement.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="navcontainer">
-            <img src="images/smalllogo.png" alt="College Cents Logo" class="navimg">
+            <img src="images/logo.png" alt="College Cents Logo" class="navimg">
 
             <div class="navlinks">
                 <a href="index.html">Home</a> 
@@ -26,7 +26,7 @@
     <header>
         <p class="pagequote">“The question isn’t at what age I want to retire, it’s at what income” – George Foreman</p>
         <h1 class="pagetitle">Retirement Planning</h1>
-        <img src="images/retirementbanner.jpg" alt="3 Jars of coins with growing plants" class="pageheadimg">
+        <img src="images/retirementbanner.png" alt="3 Jars of coins with growing plants" class="pageheadimg">
     </header>
 
     <main>
