--- a/project/investments.html
+++ b/project/investments.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="navcontainer">
-            <img src="images/smalllogo.png" alt="College Cents Logo" class="navimg">
+            <img src="images/logo.png" alt="College Cents Logo" class="navimg">
 
             <div class="navlinks">
                 <a href="index.html">Home</a> 
@@ -26,7 +26,7 @@
     <header>
         <p class="pagequote">“It’s not necessary to do extraordinary things to get extraordinary results.” – Warren Buffett</p>
         <h1 class="pagetitle">Investments</h1>
-        <img src="images/investmentsbanner.jpg" alt="Phone with stock graphs" class="pageheadimg">
+        <img src="images/investmentsbanner.png" alt="Phone with stock graphs" class="pageheadimg">
     </header>
 
     <main>
