--- a/project/taxes.html
+++ b/project/taxes.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="navcontainer">
-            <img src="images/smalllogo.png" alt="College Cents Logo" class="navimg">
+            <img src="images/logo.png" alt="College Cents Logo" class="navimg">
 
             <div class="navlinks">
                 <a href="index.html">Home</a> 
@@ -26,7 +26,7 @@
     <header>
         <p class="pagequote">“Financial freedom is available to those who learn about it and work for it.” -Robert Kiyosaki</p>
         <h1 class="pagetitle">Taxes</h1>
-        <img src="images/taxbanner.jpg" alt="Tax papers with cubes on top spelling TAX" class="pageheadimg">
+        <img src="images/taxbanner.png" alt="Tax papers with cubes on top spelling TAX" class="pageheadimg">
     </header>
 
     <main>
