--- a/project/taxes.html
+++ b/project/taxes.html
@@ -72,7 +72,7 @@
         <section id="pagecontainer2">
             <h2 class="pagesubtitle">Tax Brackets</h2>
             <br>
-            <img src="images/taxbrackets.jpg" alt="Chart of Tax Brackets for 2021 tax submission" class="budgetimg">
+            <img src="images/taxbrackets.jpg" alt="Chart of Tax Brackets for 2021 tax submission" class="bracketimg">
         </section>
 
         <section>
@@ -80,7 +80,7 @@
 
             <div id="pagecontainer">
                 <div>
-                    <img src="images/americanoppcredit.jpg" alt="American Opportunity Credit AGI limits">
+                    <img src="images/americanoppcredit.jpg" alt="American Opportunity Credit AGI limits" class="chartimg">
                 </div>
                 <div>
                     <h3 class="pageptitle3">American Opportunity Credit |</h3>
@@ -100,7 +100,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="images/tuitionfeededuction.jpg" alt="Tuition Fee Deduction AGI Limits">
+                    <img src="images/tuitionfeededuction.jpg" alt="Tuition Fee Deduction AGI Limits" class="chartimg">
                 </div>
             </div>
 
