--- a/project/cashflow.html
+++ b/project/cashflow.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Cents Cashflow</title>
 
     <link rel="stylesheet" href="styles.css">
@@ -39,7 +40,7 @@
 
             <div id="pagecontainer">
                 <div>
-                    <img src="images/income.jpg" alt="calulator ontop of money">
+                    <img src="images/income.jpg" alt="calulator ontop of money" class="pageimgleft">
                 </div>
 
                 <div>
@@ -51,6 +52,8 @@
                 </div>
             </div>
             <br>
+
+            <div class="clear"></div>
 
             <div id="pagecontainer2">
             <h3 class="pageptitle2">| Savings & Spending</h3>
@@ -114,7 +117,7 @@
             <h2 class="pagesubtitle">Debt</h2>
             <div id="pagecontainer">
                 <div>
-                    <img src="images/debt.jpg" alt="stressed man holding papers">
+                    <img src="images/debt.jpg" alt="stressed man holding papers" class="pageimgleft">
                 </div>
 
                 <div>
@@ -134,11 +137,9 @@
                     </p>
                 </div>
             </div>
-
-            <div id="pagecontainer2">
-            
-            </div>
         </section>
+
+        <div class="clear"></div>
     </main>
 
     <footer>
