--- a/project/taxes.html
+++ b/project/taxes.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Cents Taxes</title>
 
     <link rel="stylesheet" href="styles.css">
@@ -72,7 +73,7 @@
         <section id="pagecontainer2">
             <h2 class="pagesubtitle">Tax Brackets</h2>
             <br>
-            <img src="images/taxbrackets.jpg" alt="Chart of Tax Brackets for 2021 tax submission" class="bracketimg">
+            <img src="images/taxbrackets.jpg" alt="Chart of Tax Brackets for 2021 tax submission" class="budgetimg">
         </section>
 
         <section>
@@ -80,7 +81,7 @@
 
             <div id="pagecontainer">
                 <div>
-                    <img src="images/americanoppcredit.jpg" alt="American Opportunity Credit AGI limits" class="chartimg">
+                    <img src="images/americanoppcredit.jpg" alt="American Opportunity Credit AGI limits" class="pageimgleft">
                 </div>
                 <div>
                     <h3 class="pageptitle3">American Opportunity Credit |</h3>
@@ -90,7 +91,13 @@
                 </div>
             </div>
 
+            <div class="clear"></div>
+
             <div id="pagecontainer">
+                <div>
+                    <img src="images/tuitionfeededuction.jpg" alt="Tuition Fee Deduction AGI Limits" class="pageimgright">
+                </div>
+
                 <div>
                     <h3 class="pageptitle4">| Tuition and Fees Deduction</h3>
                     <p class="pagetext2">Students who paid for tuition, books, supplies, etc. for a degree program they were enrolled in
@@ -99,10 +106,9 @@
                         And once again there are adjusted gross income limits that apply.
                     </p>
                 </div>
-                <div>
-                    <img src="images/tuitionfeededuction.jpg" alt="Tuition Fee Deduction AGI Limits" class="chartimg">
-                </div>
             </div>
+
+            <div class="clear"></div>
 
         </section>
     </main>
